# drf_project_v2

./: .env.example  .flake8  .gitignore  Dockerfile  Dockerfile.backend  README.md  docker-compose.yaml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml  test.yml
config/: celery.py  settings.py  urls.py
html/: index.html
lms/: models.py  paginators.py  serializers.py  stripe_services.py  tasks.py  test_lms.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_course_options_alter_lesson_options.py  0003_course_owner_lesson_owner_subscription.py
users/: admin.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_payment_payment_status_payment_stripe_price_id_and_more.py
