[tool.poetry]
name = "drf-project"
version = "0.1.0"
description = "Система управления обучением (LMS) на Django и Django REST Framework"
authors = ["Carplatinum <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "config" },
    { include = "users" },
    { include = "courses" },
    { include = "lessons" },
    { include = "payments" },
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

Django = "^4.0"
djangorestframework = "^3.14"
django-filter = "^23.0"
psycopg2-binary = "^2.9"  # PostgreSQL драйвер
python-dotenv = "^1.0"     # для чтения .env
celery = "^5.3"
redis = "^4.3"
djangorestframework-simplejwt = "^5.5.1"
drf-spectacular = "^0.28.0"
drf-yasg = "^1.21.11"
django-celery-beat = "^2.8.1"
stripe = "^13.0.1"
pillow = "^11.3.0"

[tool.poetry.dev-dependencies]
black = "^23.3"
flake8 = "^6.0"
isort = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
