[tool.poetry]
name = "drf-project"
version = "0.1.0"
description = "Система управления обучением (LMS) на Django и Django REST Framework"
authors = ["Carplatinum <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "config" },
    { include = "users" },
    { include = "lms" },
]

license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

Django = "^5.2"
djangorestframework = "^3.16"
django-filter = "^25.1"
psycopg2-binary = "^2.9"
python-dotenv = "^1.1"
celery = "^5.5"
redis = "^4.6"
djangorestframework-simplejwt = "^5.5.1"
drf-spectacular = "^0.28"
drf-yasg = "^1.21"
django-celery-beat = "^2.8"
stripe = "^13.0"
pillow = "^11.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3"
flake8 = "^6.0"
isort = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*SwaggerJSONRenderer.*:DeprecationWarning",
    "ignore:.*SwaggerYAMLRenderer.*:DeprecationWarning",
    "ignore::DeprecationWarning"
]
